Fixed the alignment of the buttons and text field in the class view, now working on making it functional
git-svn-id: https://rocs.googlecode.com/svn/trunk@97 06a21a18-f190-11dd-aa46-671127399dce

--- a/src/css/rocs.css
+++ b/src/css/rocs.css
@@ -78,7 +78,7 @@ div#rocs_PORTLET_rocs_courses_pane {
 
 div#rocs_PORTLET_rocs_courses_pane select.class_view {    
     width: 650px;
-    height: 120px;
+    height: 90px;
     overflow-x: scroll;
 }
 
@@ -88,14 +88,6 @@ div#rocs_PORTLET_rocs_courses_pane table {
 
 div#rocs_PORTLET_rocs_courses_pane table td {
     padding: 4px;
-}
-
-div#rocs_PORTLET_rocs_courses_pane table td select {
-    width: 100px;
-}
-
-div#rocs_PORTLET_rocs_courses_pane table td input[type="text"] {
-    width: 100px;
 }
 
 div#rocs_PORTLET_rocs_search_pane {
